data/derived/comb/progs/unify/prog1330.ml.out
Characters 78-98:
  | Sine s -> String.concat "pi* " ^ exprToString s;;
              ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string list -> string
       but an expression was expected of type string
